refactor user role management and local setup